--- a/4_sem/Lab_3/mainwindow.ui
+++ b/4_sem/Lab_3/mainwindow.ui
@@ -6,176 +6,215 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1058</width>
-    <height>576</height>
+    <width>1041</width>
+    <height>655</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QGraphicsView" name="graphicsView">
+   <widget class="QPushButton" name="createGraph">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>30</y>
-      <width>741</width>
-      <height>491</height>
+      <x>10</x>
+      <y>230</y>
+      <width>261</width>
+      <height>23</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>270</y>
-      <width>31</width>
-      <height>21</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit_2">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>270</y>
-      <width>31</width>
-      <height>21</height>
-     </rect>
+    <property name="text">
+     <string>Создать граф</string>
     </property>
    </widget>
    <widget class="QPlainTextEdit" name="plainTextEdit">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
-      <width>281</width>
-      <height>151</height>
+      <y>32</y>
+      <width>261</width>
+      <height>192</height>
      </rect>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit_2">
+   <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>390</y>
-      <width>281</width>
-      <height>131</height>
+      <x>280</x>
+      <y>0</y>
+      <width>751</width>
+      <height>611</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit_3">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>360</y>
-      <width>281</width>
-      <height>20</height>
-     </rect>
+    <property name="widgetResizable">
+     <bool>true</bool>
     </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>749</width>
+       <height>609</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>190</y>
-      <width>281</width>
-      <height>31</height>
+      <y>10</y>
+      <width>141</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Построить граф</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Введите матрицу:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
+      <x>126</x>
+      <y>7</y>
+      <width>141</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Сгенерировать матрицу</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
       <x>10</x>
-      <y>300</y>
-      <width>281</width>
-      <height>31</height>
+      <y>310</y>
+      <width>261</width>
+      <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>Найти путь</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QPlainTextEdit" name="plainTextEdit_2">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>201</width>
-      <height>16</height>
+      <x>80</x>
+      <y>280</y>
+      <width>51</width>
+      <height>25</height>
      </rect>
-    </property>
-    <property name="text">
-     <string>Введите матрицу смежности:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QPlainTextEdit" name="plainTextEdit_3">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>10</y>
-      <width>181</width>
-      <height>16</height>
+      <x>210</x>
+      <y>280</y>
+      <width>51</width>
+      <height>25</height>
      </rect>
-    </property>
-    <property name="text">
-     <string>Исходный граф:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>250</y>
-      <width>221</width>
-      <height>16</height>
+      <y>260</y>
+      <width>271</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>Поиск пути между 2 вершинами графа:</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Найти путь между двумя заданными вершинами:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>270</y>
-      <width>71</width>
+      <y>280</y>
+      <width>81</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>От вершины</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;От вершины&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>270</y>
-      <width>71</width>
+      <x>140</x>
+      <y>280</y>
+      <width>61</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>до вершины</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;до вершины&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>330</y>
+      <width>16</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="plainTextEdit_4">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>410</y>
+      <width>261</width>
+      <height>201</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="plainTextEdit_5">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>360</y>
+      <width>261</width>
+      <height>26</height>
+     </rect>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>12</x>
       <y>340</y>
+      <width>131</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Результаты поиска:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>390</y>
       <width>131</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Результат поиска</string>
+     <string>Полученная матрица:</string>
     </property>
    </widget>
   </widget>
@@ -184,7 +223,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1058</width>
+     <width>1041</width>
      <height>21</height>
     </rect>
    </property>
@@ -192,34 +231,36 @@
     <property name="title">
      <string>Файл</string>
     </property>
-    <addaction name="action"/>
+    <addaction name="openfile"/>
    </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
-     <string>Ген</string>
+     <string>Справка</string>
     </property>
+    <addaction name="action"/>
     <addaction name="action_2"/>
    </widget>
    <addaction name="menu"/>
    <addaction name="menu_2"/>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="openfile">
+   <property name="icon">
+    <iconset>
+     <normaloff>../build-graphviz_beta-Desktop_Qt_5_10_0_MinGW_32bit-Debug/open.png</normaloff>../build-graphviz_beta-Desktop_Qt_5_10_0_MinGW_32bit-Debug/open.png</iconset>
+   </property>
+   <property name="text">
+    <string>Открыть</string>
+   </property>
+  </action>
   <action name="action">
    <property name="text">
-    <string>Взять из файла</string>
+    <string>О программе</string>
    </property>
   </action>
   <action name="action_2">
    <property name="text">
-    <string>Ген</string>
+    <string>Об авторе</string>
    </property>
   </action>
  </widget>
