--- a/4_sem/Lab_3/version_ElasticNodes/resources.qrc
+++ b/4_sem/Lab_3/version_ElasticNodes/resources.qrc
@@ -9,6 +9,8 @@
         <file>help/style.css</file>
         <file>help/about_graph.htm</file>
         <file>help/examle_finded_way.png</file>
+        <file>help/me.jpg</file>
+        <file>help/me.gif</file>
     </qresource>
     <qresource prefix="/images">
         <file>images/2.png</file>
